# bikes_rent

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
authentication/: managers.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
bikes/: admin.py  models.py  serializers.py  urls.py  views.py
bikes/migrations/: 0001_initial.py  0002_bike_rented_time.py  0003_remove_bike_price_remove_bike_rented_at_and_more.py  0004_alter_rental_options.py  0005_alter_rental_options.py
bikes_rent/: asgi.py  settings.py  urls.py  wsgi.py
tests/: fixtures.py  simple_test.py
tests/bikes/: bikes_list_test.py
