[tool.poetry]
name = "test-bikes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'bikes_rent.settings'
python_files = ['tests.py', 'test_*.py', '*_tests.py']
